--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 </head>
 
 <body>
-<web>Google.com</web>
+
+
+<a href="www.https://1c-pashaev-javid.github.io/LearningCoding/Miner.html" class="text">Miner class text</a>
+<a href="www.https://1c-pashaev-javid.github.io/LearningCoding/Miner.html" class="link">Miner class link</a>
+
   
 </body>
