--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 
-<a href="www.https://1c-pashaev-javid.github.io/LearningCoding/Miner.html" class="text">Miner class text</a>
+<a href="https://1c-pashaev-javid.github.io/LearningCoding/Miner.html" class="text">Miner class text</a>
 
   
 </body>
