--- a/Miner.html
+++ b/Miner.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Счетчик</title>
-  <style>
-    /* Здесь можно добавить CSS для стилизации кнопки и счетчика */
+Mine your cryptocurrency!
+
+<button> MINE </button>
+<button onclick="counterplus()"> MINE </button>
+<div id="counter">0</div>
+
+<style>
+
     button {
       padding: 10px 20px;
       font-size: 16px;
@@ -16,19 +16,18 @@
       margin-top: 10px;
     }
   </style>
-</head>
-<body>
 
-<button onclick="counterplus()">MINE</button>
-<div id="counter">0</div>
+
 
 <script>
   function counterplus() {
-    var zhachenieperv = document.getElementById("counter");
-    var znachenieperv = parseInt(zhachenieperv.innerText);
-    zhachenieperv.innerText = znachenieperv + 1;
-  }
-</script>
+      var znachenieperv = document.getElementById("counter");
+      var znachenieplus = parseInt(znachenieperv.innerText);
+      znachenieperv.innerText = zhachenieplus + 1;
 
-</body>
-</html>
+
+  }
+
+
+
+</script>
