--- a/Miner.html
+++ b/Miner.html
@@ -1,6 +1,5 @@
 Mine your cryptocurrency!
 
-<button> MINE </button>
 <button onclick="counterplus()"> MINE </button>
 <div id="counter">0</div>
 
@@ -23,7 +22,7 @@ Mine your cryptocurrency!
   function counterplus() {
       var znachenieperv = document.getElementById("counter");
       var znachenieplus = parseInt(znachenieperv.innerText);
-      znachenieperv.innerText = zhachenieplus + 1;
+      znachenieperv.innerText = znachenieplus + 0.000001;
 
 
   }
