--- a/Miner.html
+++ b/Miner.html
@@ -21,7 +21,7 @@ Mine your cryptocurrency!
 <script>
   function counterplus() {
       var znachenieperv = document.getElementById("counter");
-      var znachenieplus = parseInt(znachenieperv.innerText);
+      var znachenieplus = parseFloat(znachenieperv.innerText);
       znachenieperv.innerText = znachenieplus + 0.000001;
 
 
