--- a/Miner.html
+++ b/Miner.html
@@ -1,19 +1,54 @@
-Mine your cryptocurrency!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Счетчик</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        color: #ffffff;
+        text-align: center;
+    }
+
+    #counter {
+        font-size: 48px;
+        margin-top: 20px;
+    }
+
+    button {
+        padding: 15px 30px;
+        font-size: 18px;
+        color: #ffffff;
+        background-color: #ff6bcb;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        outline: none;
+    }
+
+    button:hover {
+        background-color: #f50057;
+        transform: scale(1.05);
+    }
+
+    button:active {
+        transform: scale(0.95);
+    }
+</style>
+</head>
+<body>
 
 <button onclick="counterplus()">MINE</button>
 <div id="counter">0</div>
-
-<style>
-    button {
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-    }
-    #counter {
-        font-size: 24px;
-        margin-top: 10px;
-    }
-</style>
 
 <script>
     // Функция для увеличения счетчика
@@ -39,3 +74,6 @@ Mine your cryptocurrency!
         loadCounterValue();
     };
 </script>
+
+</body>
+</html>
