--- a/Miner.html
+++ b/Miner.html
@@ -43,6 +43,11 @@
     button:active {
         transform: scale(0.95);
     }
+
+button {
+    /* ... (остальные стили) */
+    margin: 0; /* Добавлено, чтобы убрать внешний отступ у кнопки */
+}
 </style>
 </head>
 <body>
