--- a/Miner.html
+++ b/Miner.html
@@ -18,10 +18,15 @@
         text-align: center;
     }
 
-    #counter {
-        font-size: 48px;
-        margin-top: 20px;
-    }
+   #counter {
+    font-size: 48px;
+    margin-top: 30px; /* Немного увеличил верхний отступ для выравнивания по вертикали с кнопкой */
+}
+
+button {
+    /* ... (остальные стили) */
+    margin: 10px 0; /* Установлено значение верхнего и нижнего отступа для кнопки */
+}
 
     button {
         padding: 15px 30px;
@@ -44,10 +49,6 @@
         transform: scale(0.95);
     }
 
-button {
-    /* ... (остальные стили) */
-    margin: 0; /* Добавлено, чтобы убрать внешний отступ у кнопки */
-}
 </style>
 </head>
 <body>
