--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
   <h1>Привет, Сеймур Сморти! Я программист!</h1>
 
   <div class="button-container">
-    <a href="https://1c-pashaev-javid.github.io/LearningCoding/Miner.html" class="text">Miner class text</a>
-    <button onclick="showAlert()">Кнопка 1</button>
-    <button onclick="animateElement()">Кнопка 2</button>
+    <a href="https://1c-pashaev-javid.github.io/LearningCoding/Miner.html">Miner v1</a>
+    <a href="https://1c-pashaev-javid.github.io/LearningCoding/TestMine.html">AI Miner Demo</a>
     <!-- Добавьте другие кнопки и элементы здесь -->
   </div>
 
