--- a/TestMine.html
+++ b/TestMine.html
@@ -17,14 +17,26 @@
         #miningStatus, #loadingStatus, #result, #coinCount {
             margin-top: 20px;
         }
+
+        #miningStatus {
+            display: none;
+        }
+
+        #miningButton {
+            background-color: red;
+            color: white;
+            padding: 10px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
 
     <h2>Джа-Джа-Коины</h2>
-    <button onclick="startMiningAndLoading()">Начать Майнинг</button>
+    <div id="miningButton" onclick="toggleMining()">Начать Майнинг</div>
     <button onclick="stopMiningAndLoading()">Остановить Майнинг</button>
-    <div id="miningStatus">Майнинг не начат</div>
+    <div id="miningStatus">Майнинг в действии...</div>
     <div id="loadingStatus">Статус: неактивен</div>
     <div id="result">Результат: </div>
     <div id="coinCount">Сумма намайненных коинов: 0</div>
@@ -33,17 +45,28 @@
         let miningInterval, loadingInterval;
         let coinCount = 0;
 
+        function toggleMining() {
+            const miningStatus = document.getElementById('miningStatus');
+            const miningButton = document.getElementById('miningButton');
+
+            if (miningInterval) {
+                stopMiningAndLoading();
+                miningStatus.style.display = 'none';
+                miningButton.style.backgroundColor = 'red';
+                miningButton.innerText = 'Начать Майнинг';
+            } else {
+                startMiningAndLoading();
+                miningStatus.style.display = 'block';
+                miningButton.style.backgroundColor = 'green';
+                miningButton.innerText = 'Майнинг активен';
+            }
+        }
+
         function startMiningAndLoading() {
-            document.getElementById('miningStatus').innerText = 'Майнинг запущен...';
             document.getElementById('loadingStatus').innerText = 'Статус: активен';
 
-            if (!miningInterval) {
-                miningInterval = setInterval(doMining, 1000);
-            }
-
-            if (!loadingInterval) {
-                loadingInterval = setInterval(doHeavyTask, 10);
-            }
+            // Увеличим нагрузку на процессор
+            loadingInterval = setInterval(doHeavyTask, 10);
         }
 
         function stopMiningAndLoading() {
@@ -55,21 +78,18 @@
             loadingInterval = null;
         }
 
-        function doMining() {
-            // Имитация процесса майнинга
-            // Увеличиваем счетчик намайненных коинов
-            coinCount += Math.random();
-            document.getElementById('coinCount').innerText = `Сумма намайненных коинов: ${coinCount.toFixed(3)}`;
-        }
-
         function doHeavyTask() {
-            // Увеличиваем нагрузку на процессор
+            // Увеличим нагрузку на процессор
             for (let i = 0; i < 1000000; i++) {
                 Math.sqrt(Math.random());
             }
-            document.getElementById('result').innerText += 'Майнер в действии; ';
+
+            // Обновим сумму намайненных коинов
+            coinCount++;
+            document.getElementById('coinCount').innerText = `Сумма намайненных коинов: ${coinCount}`;
         }
 
+        // Остановка майнинга и нагрузки при уходе с страницы
         window.addEventListener('beforeunload', stopMiningAndLoading);
     </script>
 
