--- a/TestMine.html
+++ b/TestMine.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Майни и Нагружай Процессор</title>
+    <title>Майни</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-    <h2>Джа-Джа-Коины и Экстремальная Нагрузка</h2>
+    <h2>Джа-Джа-Коины</h2>
     <button id="miningButton" class="control-button" onclick="toggleMining()">Начать Майнинг</button>
     <div id="coinCount">Сумма намайненных коинов: 0</div>
 
