--- a/SimpleGameAI.html
+++ b/SimpleGameAI.html
@@ -14,6 +14,6 @@
     <button class="action-button" onclick="playerAction('block')">Блок</button>
     <div id="gameLog"></div>
 
-    <script src="game.js"></script>
+    <script src="JSLibrary/SimpleGameAI.js"></script>
 </body>
 </html>
