--- a/Azona_index.html
+++ b/Azona_index.html
@@ -21,6 +21,6 @@
         <p>или <a href="#" onclick="toggleForms()">войти</a></p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="JSLibrary/Azona_Index.js"></script>
 </body>
 </html>
