--- a/Azona_index.html
+++ b/Azona_index.html
@@ -1,26 +1,66 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Аномальная Зона - Вход/Регистрация</title>
+    <title>Аномальная Зона - Вход и Регистрация</title>
+    <!-- Ссылки на Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
 </head>
 <body>
     <div id="loginForm">
         <h2>Вход</h2>
-        <input type="text" id="loginUsername" placeholder="Логин">
+        <input type="email" id="loginEmail" placeholder="Email">
         <input type="password" id="loginPassword" placeholder="Пароль">
         <button onclick="login()">Войти</button>
-        <p>или <a href="#" onclick="toggleForms()">зарегистрироваться</a></p>
     </div>
-
-    <div id="registerForm" style="display: none;">
+    
+    <div id="registerForm">
         <h2>Регистрация</h2>
-        <input type="text" id="registerUsername" placeholder="Логин">
+        <input type="email" id="registerEmail" placeholder="Email">
         <input type="password" id="registerPassword" placeholder="Пароль">
-        <button onclick="register()">Зарегистрироваться</button>
-        <p>или <a href="#" onclick="toggleForms()">войти</a></p>
+        <button onclick="register()">Регистрация</button>
     </div>
+    
+    <script>
+        // Ваш конфиг Firebase
+        var firebaseConfig = {
+    apiKey: "AIzaSyBvH90U5Yt5YFSXB-00cOBxurr-aStlWTE",
+    authDomain: "azonalogin.firebaseapp.com",
+    projectId: "azonalogin",
+    storageBucket: "azonalogin.appspot.com",
+    messagingSenderId: "478430437247",
+    appId: "1:478430437247:web:150677447573f3b695844a",
+    measurementId: "G-RK77MQT6TG"
+            // Конфигурация Firebase
+        };
+        // Инициализация Firebase
+        firebase.initializeApp(firebaseConfig);
 
-    <script src="JSLibrary/Azona_Index.js"></script>
+        function register() {
+            var email = document.getElementById('registerEmail').value;
+            var password = document.getElementById('registerPassword').value;
+            firebase.auth().createUserWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    // Регистрация успешна
+                    console.log("Регистрация успешна", userCredential);
+                })
+                .catch((error) => {
+                    console.error("Ошибка регистрации", error);
+                });
+        }
+
+        function login() {
+            var email = document.getElementById('loginEmail').value;
+            var password = document.getElementById('loginPassword').value;
+            firebase.auth().signInWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    // Вход успешен
+                    console.log("Вход выполнен", userCredential);
+                })
+                .catch((error) => {
+                    console.error("Ошибка входа", error);
+                });
+        }
+    </script>
 </body>
 </html>
