--- a/Azona_index.html
+++ b/Azona_index.html
@@ -6,7 +6,7 @@
     
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-    <script>
+    <script type="module">
       const firebaseConfig = {
         apiKey: "AIzaSyBvH90U5Yt5YFSXB-00cOBxurr-aStlWTE",
         authDomain: "azonalogin.firebaseapp.com",
